// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Oauth should render oauth config after request finish 1`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.oauth
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Oauth should render oauth config after request finish 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.oauth
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      system.oauth.ceTips
      <div
        class="ant-typography"
      >
        <ul>
          <li>
            <a
              href="https://actiontech.github.io/sqle-docs-cn/"
            >
              https://actiontech.github.io/sqle-docs-cn/
            </a>
          </li>
          <li>
            <a
              href="https://www.actionsky.com/"
            >
              https://www.actionsky.com/
            </a>
          </li>
        </ul>
      </div>
      <section>
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.oauth.enable
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <button
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            common.modify
                          </span>
                        </button>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
        hidden=""
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable"
                title="system.oauth.enable"
              >
                system.oauth.enable
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    id="enable"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="submit"
            >
              <span>
                common.submit
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default"
              type="button"
            >
              <span>
                common.cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Oauth should update oauth config after user input config form 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.oauth
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      system.oauth.ceTips
      <div
        class="ant-typography"
      >
        <ul>
          <li>
            <a
              href="https://actiontech.github.io/sqle-docs-cn/"
            >
              https://actiontech.github.io/sqle-docs-cn/
            </a>
          </li>
          <li>
            <a
              href="https://www.actionsky.com/"
            >
              https://www.actionsky.com/
            </a>
          </li>
        </ul>
      </div>
      <section
        hidden=""
      >
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.oauth.enable
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <button
                          ant-click-animating-without-extra-node="false"
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            common.modify
                          </span>
                        </button>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable"
                title="system.oauth.enable"
              >
                system.oauth.enable
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="false"
                    class="ant-switch"
                    id="enable"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn ant-btn-primary"
              type="submit"
            >
              <span>
                common.submit
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default"
              type="button"
            >
              <span>
                common.cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Oauth should update oauth config after user input config form 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.oauth
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      system.oauth.ceTips
      <div
        class="ant-typography"
      >
        <ul>
          <li>
            <a
              href="https://actiontech.github.io/sqle-docs-cn/"
            >
              https://actiontech.github.io/sqle-docs-cn/
            </a>
          </li>
          <li>
            <a
              href="https://www.actionsky.com/"
            >
              https://www.actionsky.com/
            </a>
          </li>
        </ul>
      </div>
      <section
        hidden=""
      >
        <div
          class="ant-descriptions"
        >
          <div
            class="ant-descriptions-view"
          >
            <table>
              <tbody>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-label"
                      >
                        system.oauth.enable
                      </span>
                      <span
                        class="ant-descriptions-item-content"
                      >
                        common.close
                      </span>
                    </div>
                  </td>
                </tr>
                <tr
                  class="ant-descriptions-row"
                >
                  <td
                    class="ant-descriptions-item"
                    colspan="3"
                  >
                    <div
                      class="ant-descriptions-item-container"
                    >
                      <span
                        class="ant-descriptions-item-content"
                      >
                        <button
                          ant-click-animating-without-extra-node="true"
                          class="ant-btn ant-btn-primary"
                          type="button"
                        >
                          <span>
                            common.modify
                          </span>
                        </button>
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </section>
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="enable"
                title="system.oauth.enable"
              >
                system.oauth.enable
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    aria-checked="true"
                    class="ant-switch ant-switch-checked"
                    id="enable"
                    role="switch"
                    type="button"
                  >
                    <div
                      class="ant-switch-handle"
                    />
                    <span
                      class="ant-switch-inner"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="clientId"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.clientId
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="clientId"
                    type="text"
                    value="6lq#s#aRibpMvhp48ztHOg@sZ3PxA2e(MYdS!CJANzLPBdg]m)"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="clientSecret"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.clientSecret
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input ant-input-status-success"
                    id="clientSecret"
                    type="text"
                    value="1234567"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="clientHost"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.clientHost
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input ant-input-status-success"
                    id="clientHost"
                    type="text"
                    value="aaabbb"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="serverAuthUrl"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.serverAuthUrl
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="serverAuthUrl"
                    type="text"
                    value="prospero://tpmui.cf/timilp"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="serverTokenUrl"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.serverTokenUrl
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="serverTokenUrl"
                    type="text"
                    value="mid://juckyny.na/xxsxnmf"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="serverUserIdUrl"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.serverUserIdUrl
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="serverUserIdUrl"
                    type="text"
                    value="cid://hqpbmxvbpl.cd/lcfyjtlkuj"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="scopes"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.scopes
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="scopes"
                    type="text"
                    value="1XGCBu%brJrwjse@R^Ox,lpSLVoFnqZBfGHeI8023"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="accessTokenKeyName"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.accessTokenKeyName
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="accessTokenKeyName"
                    type="text"
                    value="rpYV2tN4&545Jvkd3%J6"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class="ant-form-item-required"
                for="userIdKeyName"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.userIdKeyName
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    aria-required="true"
                    class="ant-input"
                    id="userIdKeyName"
                    type="text"
                    value="NFkVxY[4Xv^UFU&x&t5y"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-form-item-label ant-col-xs-24 ant-col-sm-8"
            >
              <label
                class=""
                for="loginButtonText"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle text-orange"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    system.oauth.loginButtonText
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control ant-col-xs-24 ant-col-sm-12 ant-col-md-10"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input"
                    id="loginButtonText"
                    type="text"
                    value="VT[9[I$M(EW5R9o12*&Z"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              ant-click-animating-without-extra-node="true"
              class="ant-btn ant-btn-primary ant-btn-loading"
              type="submit"
            >
              <span
                class="ant-btn-loading-icon"
              >
                <span
                  aria-label="loading"
                  class="anticon anticon-loading anticon-spin"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="loading"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                common.submit
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default"
              disabled=""
              type="button"
            >
              <span>
                common.cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Oauth should update oauth config after user input config form 3`] = `
<div>
  <div
    class="ant-card ant-card-loading ant-card-bordered"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          system.title.oauth
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-skeleton ant-skeleton-active"
      >
        <div
          class="ant-skeleton-content"
        >
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
            <li />
            <li />
            <li
              style="width: 61%;"
            />
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
